# kornia-yolo

./: .gitignore  Cargo.toml  README.md
examples/: inference.rs
src/: bounding_box.rs  lib.rs  model.rs  yolov8.rs
